--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TopReview</string>
+    <string name="sign_up">signup</string>
+    <string name="username">username</string>
 </resources>
